--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+canvas {
+  width: 100% !important;
+  height: 400px !important;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
